# swift-rust-test

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
src/: build.rs  main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: build.rs  main.rs
src/routes/: index.svelte
tauri-swift/: Package.resolved  Package.swift  README.md
tauri-swift/Sources/tauri-swift/: tauri_swift.swift
