[package]
name = "swift-rust-test"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swift-rs = "0.3.0"

[build-dependencies]
swift-rs = { version = "0.3.0", features = ["build"] }