[package]
name = "app"
version = "0.1.0"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"


[build-dependencies]
swift-rs = { git = "https://github.com/Brendonovich/swift-rs", branch = "autorelease", features = ["build"] }

[dependencies]
serde = "1.0.137"
serde_json = "1.0.81"
swift-rs = { git = "https://github.com/Brendonovich/swift-rs", branch = "autorelease" }
